--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -68,6 +68,7 @@ body {
 }
 
 .main__info {
+  height: calc(100vh - 100px);
   width: 100%;
   z-index: 1000;
 }
@@ -141,8 +142,6 @@ body {
   float: left;
   background-color: transparent;
   border: none;
-  margin-left: 50%;
-  margin-right: 50%;
 }
 
 .info__arrow-image {
@@ -193,8 +192,6 @@ body {
 .service-card {
   cursor: pointer;
   position: relative;
-  transition: 0.6s;
-  width: 280px;
   height: 175px;
   background-color: #F0F1F5;
   padding: 25px;
@@ -205,8 +202,8 @@ body {
   z-index: 101;
   background-color: #5057FF;
   color: #fff;
-  width: 280px;
-  height: 175px;
+  width: 100%;
+  height: 100%;
   padding: 25px;
 }
 
@@ -293,22 +290,24 @@ body {
 
 .stack__list-item {
   height: 190px;
-  width: 180px;
+  transition: 0.3s;
   display: flex;
   flex-direction: column;
   cursor: pointer;
   margin-bottom: 20px;
 }
 .stack__list-item:hover .stack__name {
-  color: #72BEFF;
+  color: #5057FF;
 }
-.stack__list-item:hover svg {
-  fill: #72BEFF;
+.stack__list-item:hover .stack__icon {
+  filter: grayscale(0%);
 }
 
 .stack__icon {
+  filter: grayscale(100%);
   height: 100%;
   display: flex;
+  transition: 0.3s;
   justify-content: center;
   align-items: center;
 }
@@ -317,6 +316,7 @@ body {
 }
 
 .stack__name {
+  transition: 0.3s;
   margin-bottom: 0;
   text-align: center;
   font-weight: 600;
@@ -367,8 +367,51 @@ body {
 
 .projects__list {
   list-style: none;
-  padding: 0;
   margin-bottom: 0;
+}
+
+.pr {
+  transition: 0.3s;
+  cursor: pointer;
+  height: 300px;
+  width: 100%;
+  display: inline-block;
+  margin-left: 2px;
+  text-align: left;
+}
+.pr:hover .projects__hover {
+  display: block;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  padding-left: 15px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.projects__hover {
+  transition: 0.3s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.tags {
+  position: absolute;
+  bottom: 5px;
+}
+.tags span {
+  margin-left: 5px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #FFFFFF;
+}
+
+.partners__item {
+  cursor: pointer;
+}
+.partners__item:hover {
+  outline: solid 1px #5057FF;
 }
 
 .footer__el {
@@ -491,7 +534,6 @@ body {
   height: 51px;
   left: 70px;
   top: 70px;
-  font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 34px;
