--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,7 +82,7 @@ body {
 }
 
 .main__info {
-  //height: calc(100vh - 100px);
+  height: calc(100vh - 100px);
   width: 100%;
   z-index: 1000;
 }
@@ -158,8 +158,8 @@ body {
  float: left;
   background-color: transparent;
   border: none;
-  margin-left: 50%;
-  margin-right: 50%;
+  //margin-left: 50%;
+  //margin-right: 50%;
   //position: absolute;
   //bottom: 30px;
   //left: 50%;
@@ -200,8 +200,6 @@ body {
 .service-card {
   cursor: pointer;
   position: relative;
-  transition: .6s;
-  width: 280px;
   height: 175px;
   background-color: $background;
   padding: 25px;
@@ -212,8 +210,8 @@ body {
     z-index: 101;
     background-color: $backgroundContrast;
     color: $textContrast;
-    width: 280px;
-    height: 175px;
+    width: 100%;
+    height: 100%;
     padding: 25px;
   }
 }
@@ -287,7 +285,7 @@ body {
 
 .stack__list-item {
   height: 190px;
-  width: 180px;
+  transition: 0.3s;
   display: flex;
   flex-direction: column;
   cursor: pointer;
@@ -295,27 +293,30 @@ body {
 
   &:hover {
     .stack__name {
-      color: $iconSelected;
+      color: $backgroundContrast;
     }
 
-    svg {
-      fill: $iconSelected;
+    .stack__icon{
+      filter: grayscale(0%);
     }
   }
 }
 
 .stack__icon {
+  filter: grayscale(100%);
   height: 100%;
   display: flex;
+  transition: 0.3s;
   justify-content: center;
   align-items: center;
-
   svg {
     fill: $gray1;
   }
+
 }
 
 .stack__name {
+  transition: 0.3s;
   margin-bottom: 0;
   text-align: center;
   font-weight: 600;
@@ -324,9 +325,7 @@ body {
   color: $gray1;
 }
 
-.projects {
 
-}
 
 .projects__title {
   @include SectionsTitle('02');
@@ -342,9 +341,54 @@ body {
 
 .projects__list {
   list-style: none;
-  padding: 0;
   margin-bottom: 0;
 }
+
+.pr{
+  transition: 0.3s;
+  cursor: pointer;
+  height: 300px;
+  width: 100%;
+  display: inline-block;
+  margin-left: 2px;
+  text-align: left;
+
+  &:hover .projects__hover{
+    display: block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    padding-left: 15px;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+.projects__hover{
+  transition: 0.3s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.tags{
+  position: absolute;
+  bottom: 5px;
+  span{
+    margin-left: 5px;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: #FFFFFF;
+  }
+}
+
+.partners__item{
+  cursor: pointer;
+  &:hover{
+    outline: solid 1px $backgroundContrast;
+  }
+}
+
 
 .footer__el {
   background: #272727;
@@ -466,8 +510,7 @@ body {
   height: 51px;
   left: 70px;
   top: 70px;
-
-  font-family: Poppins;
+  //font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 34px;
@@ -478,7 +521,7 @@ body {
 }
 
 .input__form{
-  //border: 1px solid #5057FF;
+  //border: 1dpx solid #5057FF;
   box-sizing: border-box;
   border-radius: 0;
   &.input__form:focus{
@@ -498,7 +541,6 @@ body {
   color: #5057FF;
   cursor: pointer;
   transition: .1s;
-
   &:hover{
     outline: rgba(80, 87, 255, 0.3) solid 1px;
   }
