--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -158,8 +158,8 @@ body {
  float: left;
   background-color: transparent;
   border: none;
-  //margin-left: 50%;
-  //margin-right: 50%;
+  margin-left: 50%;
+  margin-right: 50%;
   //position: absolute;
   //bottom: 30px;
   //left: 50%;
