--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -68,7 +68,6 @@ body {
 }
 
 .main__info {
-  height: calc(100vh - 100px);
   width: 100%;
   z-index: 1000;
 }
@@ -152,7 +151,7 @@ body {
 }
 
 .main__services {
-  margin-top: 1px;
+  margin-top: 10%;
   margin-bottom: 210px;
 }
 
