--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,7 +82,7 @@ body {
 }
 
 .main__info {
-  height: calc(100vh - 100px);
+  //height: calc(100vh - 100px);
   width: 100%;
   z-index: 1000;
 }
@@ -171,7 +171,7 @@ body {
 }
 
 .main__services {
-  margin-top: 1px;
+  margin-top: 10%;
   margin-bottom: 210px;
 }
 
