--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -290,7 +290,7 @@ body {
 }
 
 .stack__list-item {
-  height: 190px;
+  height: 210px;
   transition: 0.3s;
   display: flex;
   flex-direction: column;
@@ -455,6 +455,7 @@ body {
 
 .right__subsection.d-flex.flex-column:nth-child(2) {
   padding-left: 60px;
+  padding-right: 20px;
 }
 
 .right__subsection.d-flex.flex-column a {
