--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -284,7 +284,7 @@ body {
 }
 
 .stack__list-item {
-  height: 190px;
+  height: 210px;
   transition: 0.3s;
   display: flex;
   flex-direction: column;
@@ -430,6 +430,7 @@ body {
 
 .right__subsection.d-flex.flex-column:nth-child(2) {
   padding-left: 60px;
+  padding-right: 20px;
 }
 
 .right__subsection.d-flex.flex-column a {
