--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -286,6 +286,7 @@ body {
 .stack__list-item {
   height: 175px;
   transition: 0.3s;
+  margin-top: 5px;
   display: flex;
   flex-direction: column;
   cursor: pointer;
